# cqs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  PROJECT_CONTINUITY.md  README.md  ROADMAP.md  ROADMAP_ARCHIVE.md  SECURITY.md  pr_body.md
.claude/skills/audit/: SKILL.md
.claude/skills/cqs-bootstrap/: SKILL.md
.claude/skills/cqs-plan/: SKILL.md
.claude/skills/cqs-verify/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
docs/: MOONSHOT.md  audit-findings-v0.19.4.md  audit-findings-v0.28.1.md  audit-findings-v1.12.0.md  audit-findings-v1.4.0.md  audit-findings-v1.5.0.md  audit-findings.md  audit-triage-v0.19.4.md  audit-triage-v0.28.1.md  audit-triage-v1.12.0.md  audit-triage-v1.4.0.md  audit-triage.md  notes.toml  research-log.md
docs/plans/: 2026-03-08-p4-audit-fixes.md  2026-03-31-audit-tier1-2-plan.md  2026-03-31-session-summary.md
docs/superpowers/plans/: 2026-03-19-train-data.md  2026-03-20-code-reranker.md  2026-03-20-hyde-queries.md  2026-03-23-issue-fixes-645-650-647-648-646.md  2026-03-24-adversarial-test-hardening.md  2026-03-24-contrastive-summaries.md  2026-03-24-hard-eval-with-summaries.md  2026-03-24-keydac-augmentation.md  2026-03-25-synthetic-query-training.md
docs/superpowers/specs/: 2026-03-19-train-data-design.md  2026-03-20-code-reranker-design.md  2026-03-20-hyde-queries-design.md  2026-03-27-dxf-cad-module-design.md  2026-03-29-new-commands-v1.11.md  2026-04-02-telemetry-dashboard-design.md
scripts/: eval_stability.sh  full_model_matrix_eval.sh  run_real_eval.py
src/: audit.rs  cagra.rs  ci.rs  config.rs  diff.rs  diff_parse.rs  drift.rs  embedder.rs  gather.rs  health.rs  index.rs  lib.rs  llm.rs  main.rs  math.rs  nl.rs  note.rs  onboard.rs  plan.rs  project.rs  reference.rs  related.rs  reranker.rs  review.rs  schema.sql  scout.rs  search.rs  structural.rs  suggest.rs  task.rs  test_helpers.rs  where_to_add.rs
src/cli/: args.rs  chat.rs  config.rs  definitions.rs  dispatch.rs  display.rs  enrichment.rs  files.rs  mod.rs  pipeline.rs  staleness.rs  telemetry.rs  watch.rs
src/cli/batch/: commands.rs  handlers.rs  mod.rs  pipeline.rs
src/cli/batch/handlers/: analysis.rs  graph.rs  info.rs  misc.rs  search.rs
src/cli/commands/: affected.rs  blame.rs  brief.rs  ci.rs  context.rs  convert.rs  dead.rs  deps.rs  diff.rs  doctor.rs  drift.rs  explain.rs  export_model.rs  gather.rs  gc.rs  graph.rs  health.rs  impact.rs  impact_diff.rs  index.rs  init.rs  mod.rs  neighbors.rs  notes.rs  onboard.rs  plan.rs  query.rs  read.rs  reconstruct.rs  reference.rs  related.rs  resolve.rs  review.rs  scout.rs  similar.rs  stale.rs  stats.rs  suggest.rs  task.rs  test_map.rs  (+4 more)
src/cli/commands/graph/: callers.rs  deps.rs  explain.rs  impact.rs  impact_diff.rs  mod.rs  test_map.rs  trace.rs
src/cli/commands/index/: build.rs  gc.rs  mod.rs  stale.rs  stats.rs
src/cli/commands/infra/: audit_mode.rs  doctor.rs  init.rs  mod.rs  project.rs  reference.rs  telemetry_cmd.rs
src/cli/commands/io/: blame.rs  brief.rs  context.rs  diff.rs  drift.rs  mod.rs  notes.rs  read.rs  reconstruct.rs
src/cli/commands/review/: affected.rs  ci.rs  dead.rs  diff_review.rs  health.rs  mod.rs  suggest.rs
src/cli/commands/search/: gather.rs  mod.rs  neighbors.rs  onboard.rs  query.rs  related.rs  scout.rs  similar.rs  where_cmd.rs
src/cli/commands/train/: mod.rs  plan.rs  task.rs  train_data.rs  train_pairs.rs
src/convert/: chm.rs  cleaning.rs  html.rs  mod.rs  naming.rs  pdf.rs  webhelp.rs
src/doc_writer/: formats.rs  mod.rs  rewriter.rs
src/embedder/: mod.rs  models.rs  provider.rs
src/hnsw/: build.rs  mod.rs  persist.rs  safety.rs  search.rs
src/impact/: analysis.rs  bfs.rs  diff.rs  format.rs  hints.rs  mod.rs  test_map.rs  types.rs
src/language/: aspx.rs  bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  cuda.rs  elixir.rs  erlang.rs  fsharp.rs  gleam.rs  glsl.rs  go.rs  graphql.rs  haskell.rs  hcl.rs  html.rs  ini.rs  java.rs  javascript.rs  json.rs  julia.rs  kotlin.rs  latex.rs  lua.rs  make.rs  markdown.rs  mod.rs  nix.rs  objc.rs  ocaml.rs  perl.rs  php.rs  powershell.rs  protobuf.rs  python.rs  r.rs  razor.rs  ruby.rs  rust.rs  (+13 more)
src/llm/: batch.rs  doc_comments.rs  hyde.rs  mod.rs  prompts.rs  provider.rs  summary.rs
src/nl/: fields.rs  fts.rs  markdown.rs  mod.rs
src/parser/: aspx.rs  calls.rs  chunk.rs  injection.rs  l5x.rs  markdown.rs  mod.rs  types.rs
src/parser/markdown/: code_blocks.rs  headings.rs  mod.rs  tables.rs
src/search/: mod.rs  query.rs  scoring.rs  synonyms.rs
src/search/scoring/: candidate.rs  config.rs  filter.rs  mod.rs  name_match.rs  note_boost.rs
src/store/: calls.rs  chunks.rs  helpers.rs  metadata.rs  migrations.rs  mod.rs  notes.rs  search.rs  types.rs
src/store/calls/: crud.rs  dead_code.rs  mod.rs  query.rs  related.rs  test_map.rs
src/store/chunks/: async_helpers.rs  crud.rs  embeddings.rs  mod.rs  query.rs  staleness.rs
src/train_data/: bm25.rs  checkpoint.rs  diff.rs  git.rs  mod.rs  query.rs
tests/: ci_test.rs  eval_common.rs  full_pipeline_eval.sh  hnsw_test.rs  impact_diff_test.rs  impact_test.rs  model_eval.rs  parser_test.rs  pipeline_eval.rs  real_eval_callgraph.json  real_eval_cqs.json  real_eval_cqs_results.json  real_eval_expanded.json  real_eval_gitblame.json  reference_test.rs  review_test.rs  store_calls_test.rs  store_test.rs  task_test.rs  where_test.rs
tests/fixtures/: eval_hard_summaries.json  eval_sample.json  sample.cs  sample.cshtml  sample.erl  sample.ex  sample.fs  sample.graphql  sample.hs  sample.html  sample.ini  sample.json  sample.kt  sample.lua  sample.m  sample.php  sample.proto  sample.ps1  sample.r  sample.rb  sample.scala  sample.sh  sample.svelte  sample.swift  sample.tf  sample.toml  sample.vb  sample.vue  sample.xml  sample.yaml  sample.zig
