[package]
name = "cqs"
version = "1.7.0"
edition = "2021"
rust-version = "1.93"
description = "Code intelligence and RAG for AI agents. Semantic search, call graphs, impact analysis, type dependencies, and smart context assembly — in single tool calls. 51 languages, 92.7% Recall@1, 0.9624 NDCG@10. Local ML, GPU-accelerated."
license = "MIT"
repository = "https://github.com/jamie8johnson/cqs"
homepage = "https://github.com/jamie8johnson/cqs"
readme = "README.md"
keywords = ["code-intelligence", "rag", "code-search", "call-graph", "embeddings"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".claude/",
    ".githooks/",
    "CLAUDE.md",
    "PROJECT_CONTINUITY.md",
    "ROADMAP.md",
    "docs/AUDIT_*",
    "docs/DESIGN_SPEC_*",
    "docs/notes.toml",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Parsing (tree-sitter) - core is required, grammars are optional
tree-sitter = "0.26"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-fsharp = { version = "0.2", optional = true }
tree-sitter-powershell = { version = "0.26", optional = true }
tree-sitter-scala = { version = "0.25", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-hcl = { version = "1.1", optional = true }
tree-sitter-kotlin = { version = "1.1", package = "tree-sitter-kotlin-ng", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-objc = { version = "3.0", optional = true }
tree-sitter-sql = { version = "0.4", package = "tree-sitter-sequel-tsql", optional = true }
tree-sitter-proto = { version = "0.4", optional = true }
tree-sitter-graphql = { version = "0.1", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
tree-sitter-r = { version = "1.2", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-toml = { version = "0.7", package = "tree-sitter-toml-ng", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-erlang = { version = "0.15", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
# tree-sitter-clojure blocked: 0.1.0 requires tree-sitter ^0.25, incompatible with 0.26
tree-sitter-ocaml = { version = "0.24", optional = true }
tree-sitter-julia = { version = "0.23", optional = true }
tree-sitter-gleam = { version = "1.0", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-perl = { version = "1.1", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }
tree-sitter-ini = { version = "1.4", optional = true }
tree-sitter-nix = { version = "0.3", optional = true }
tree-sitter-make = { version = "1.1", optional = true }
tree-sitter-latex = { version = "0.6", package = "codebook-tree-sitter-latex", optional = true }
tree-sitter-solidity = { version = "1.2", optional = true }
tree-sitter-cuda = { version = "0.21", optional = true }
tree-sitter-glsl = { version = "0.2", optional = true }
tree-sitter-svelte = { version = "0.1", package = "tree-sitter-svelte-next", optional = true }
tree-sitter-razor = { version = "0.1", optional = true }
tree-sitter-vb-dotnet = { version = "0.1", optional = true }
tree-sitter-vue = { version = "0.1", package = "tree-sitter-vue-next", optional = true }

# ML (CUDA/TensorRT added for non-macOS targets below)
ort = "2.0.0-rc.12"
tokenizers = { version = "0.22", features = ["http"] }
hf-hub = "0.4.3"
ndarray = "0.17"
# cuVS requires ndarray 0.15, import separately for gpu-index
ndarray_015 = { package = "ndarray", version = "0.15", optional = true }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# Storage (sqlx async SQLite)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
keyring = { version = "3", optional = true }

# Vector search (HNSW default, cuVS optional)
hnsw_rs = "0.3"
simsimd = "6"
cuvs = { version = "26.2", optional = true }

# Text processing
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# Path canonicalization (strips Windows UNC \\?\ prefixes)
dunce = "1"

# Utilities
blake3 = "1"
bytemuck = { version = "1", features = ["derive"] }
ignore = "0.4"
notify = { version = "8", features = ["serde"] }
ctrlc = "3"
rayon = "1"
crossbeam-channel = "0.5"
chrono = "0.4"
globset = "0.4"
colored = "3"
indicatif = "0.18"
shell-words = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
lru = "0.16"
once_cell = "1"
tempfile = "3"

# Document conversion (optional)
fast_html2md = { version = "0.0", optional = true }
walkdir = { version = "2", optional = true }
self_cell = "1"
rustyline = "17"

# LLM summaries (optional — for SQ-6 API calls to Claude)
reqwest = { version = "0.13", features = ["json", "blocking"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# CUDA/TensorRT only available on Linux and Windows (no prebuilt binaries for macOS)
[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["cuda", "tensorrt"] }

[features]
default = ["lang-rust", "lang-python", "lang-typescript", "lang-javascript", "lang-go", "lang-c", "lang-cpp", "lang-java", "lang-csharp", "lang-fsharp", "lang-powershell", "lang-scala", "lang-ruby", "lang-bash", "lang-hcl", "lang-kotlin", "lang-swift", "lang-objc", "lang-sql", "lang-protobuf", "lang-graphql", "lang-php", "lang-lua", "lang-zig", "lang-r", "lang-yaml", "lang-toml", "lang-elixir", "lang-erlang", "lang-haskell", "lang-ocaml", "lang-julia", "lang-gleam", "lang-css", "lang-perl", "lang-html", "lang-json", "lang-xml", "lang-ini", "lang-nix", "lang-make", "lang-latex", "lang-solidity", "lang-cuda", "lang-glsl", "lang-svelte", "lang-razor", "lang-vbnet", "lang-vue", "lang-markdown", "lang-aspx", "convert", "llm-summaries"]

# Language support (opt-in, all enabled by default)
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-go = ["dep:tree-sitter-go"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-java = ["dep:tree-sitter-java"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-fsharp = ["dep:tree-sitter-fsharp"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-scala = ["dep:tree-sitter-scala"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-bash = ["dep:tree-sitter-bash"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-kotlin = ["dep:tree-sitter-kotlin"]
lang-swift = ["dep:tree-sitter-swift"]
lang-objc = ["dep:tree-sitter-objc"]
lang-sql = ["dep:tree-sitter-sql"]
lang-protobuf = ["dep:tree-sitter-proto"]
lang-graphql = ["dep:tree-sitter-graphql"]
lang-php = ["dep:tree-sitter-php"]
lang-lua = ["dep:tree-sitter-lua"]
lang-zig = ["dep:tree-sitter-zig"]
lang-r = ["dep:tree-sitter-r"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-toml = ["dep:tree-sitter-toml"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-erlang = ["dep:tree-sitter-erlang"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-julia = ["dep:tree-sitter-julia"]
lang-gleam = ["dep:tree-sitter-gleam"]
lang-css = ["dep:tree-sitter-css"]
lang-perl = ["dep:tree-sitter-perl"]
lang-html = ["dep:tree-sitter-html"]
lang-json = ["dep:tree-sitter-json"]
lang-xml = ["dep:tree-sitter-xml"]
lang-ini = ["dep:tree-sitter-ini"]
lang-nix = ["dep:tree-sitter-nix"]
lang-make = ["dep:tree-sitter-make"]
lang-latex = ["dep:tree-sitter-latex"]
lang-solidity = ["dep:tree-sitter-solidity"]
lang-cuda = ["dep:tree-sitter-cuda"]
lang-glsl = ["dep:tree-sitter-glsl"]
lang-svelte = ["dep:tree-sitter-svelte"]
lang-razor = ["dep:tree-sitter-razor"]
lang-vbnet = ["dep:tree-sitter-vb-dotnet"]
lang-vue = ["dep:tree-sitter-vue"]
lang-markdown = []  # No external deps — custom parser
lang-aspx = ["lang-csharp", "lang-vbnet"]  # Delegates to C#/VB.NET grammars
lang-all = ["lang-rust", "lang-python", "lang-typescript", "lang-javascript", "lang-go", "lang-c", "lang-cpp", "lang-java", "lang-csharp", "lang-fsharp", "lang-powershell", "lang-scala", "lang-ruby", "lang-bash", "lang-hcl", "lang-kotlin", "lang-swift", "lang-objc", "lang-sql", "lang-protobuf", "lang-graphql", "lang-php", "lang-lua", "lang-zig", "lang-r", "lang-yaml", "lang-toml", "lang-elixir", "lang-erlang", "lang-haskell", "lang-ocaml", "lang-julia", "lang-gleam", "lang-css", "lang-perl", "lang-html", "lang-json", "lang-xml", "lang-ini", "lang-nix", "lang-make", "lang-latex", "lang-solidity", "lang-cuda", "lang-glsl", "lang-svelte", "lang-razor", "lang-vbnet", "lang-vue", "lang-markdown", "lang-aspx"]

# Document conversion
convert = ["dep:fast_html2md", "dep:walkdir"]

# Other features
# encrypt feature removed - sqlx doesn't support SQLCipher directly
# TODO: Re-evaluate encryption strategy with sqlx
encrypt = ["keyring"]
gpu-index = ["cuvs", "ndarray_015"]
llm-summaries = ["dep:reqwest"]

[dev-dependencies]
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
